# Polynomial

./: .travis.yml  CMakeLists.txt
List/: CMakeLists.txt  list.h
Polynomial/: CMakeLists.txt  monom.cpp  monom.h  polynomial.cpp  polynomial.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_TMonom.cpp  test_TPolinom.cpp
